[project]
name = "tunely"
version = "0.3.0"
description = "WebSocket Tunnel - 透明反向代理隧道，支持服务端嵌入和客户端 SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "HITL Team" }
]
keywords = ["websocket", "tunnel", "proxy", "reverse-proxy", "fastapi", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
mysql = ["aiomysql>=0.2.0"]
postgres = ["asyncpg>=0.29.0"]
redis = ["redis>=5.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]
all = ["tunely[mysql,postgres,redis,dev]"]

[project.urls]
Homepage = "https://github.com/user/tunely"
Documentation = "https://github.com/user/tunely#readme"
Repository = "https://github.com/user/tunely"
Issues = "https://github.com/user/tunely/issues"
Changelog = "https://github.com/user/tunely/blob/main/CHANGELOG.md"

[project.scripts]
tunely = "tunely.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tunely"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
